# sqllogs_convert_parquet

./: .gitignore  Cargo.toml  sql_logs.tsv
src/: .main.rs.swp  main.rs
