[package]
name = "sqllogs_convert_parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "40.0.0"
arrow-csv = "40.0.0"
arrow-json = "40.0.0"
parquet = "40.0.0"
tokio = { version = "1", features = ["full"] }
